Week_4/01_cpp/BX0Parser.cpp

// Generated from BX0.g4 by ANTLR 4.7.2


#include "BX0Listener.h"

#include "BX0Parser.h"


using namespace antlrcpp;
using namespace bx;
using namespace antlr4;

BX0Parser::BX0Parser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

BX0Parser::~BX0Parser() {
  delete _interpreter;
}

std::string BX0Parser::getGrammarFileName() const {
  return "BX0.g4";
}

const std::vector<std::string>& BX0Parser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& BX0Parser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

BX0Parser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<BX0Parser::GlobalvarContext *> BX0Parser::ProgramContext::globalvar() {
  return getRuleContexts<BX0Parser::GlobalvarContext>();
}

BX0Parser::GlobalvarContext* BX0Parser::ProgramContext::globalvar(size_t i) {
  return getRuleContext<BX0Parser::GlobalvarContext>(i);
}

std::vector<BX0Parser::FunctionContext *> BX0Parser::ProgramContext::function() {
  return getRuleContexts<BX0Parser::FunctionContext>();
}

BX0Parser::FunctionContext* BX0Parser::ProgramContext::function(size_t i) {
  return getRuleContext<BX0Parser::FunctionContext>(i);
}

std::vector<BX0Parser::ProcedureContext *> BX0Parser::ProgramContext::procedure() {
  return getRuleContexts<BX0Parser::ProcedureContext>();
}

BX0Parser::ProcedureContext* BX0Parser::ProgramContext::procedure(size_t i) {
  return getRuleContext<BX0Parser::ProcedureContext>(i);
}


size_t BX0Parser::ProgramContext::getRuleIndex() const {
  return BX0Parser::RuleProgram;
}

void BX0Parser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void BX0Parser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

BX0Parser::ProgramContext* BX0Parser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, BX0Parser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << BX0Parser::T__0)
      | (1ULL << BX0Parser::T__5)
      | (1ULL << BX0Parser::T__8))) != 0)) {
      setState(43);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case BX0Parser::T__0: {
          setState(40);
          globalvar();
          break;
        }

        case BX0Parser::T__5: {
          setState(41);
          function();
          break;
        }

        case BX0Parser::T__8: {
          setState(42);
          procedure();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(47);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GlobalvarContext ------------------------------------------------------------------

BX0Parser::GlobalvarContext::GlobalvarContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<BX0Parser::Globalvar_initContext *> BX0Parser::GlobalvarContext::globalvar_init() {
  return getRuleContexts<BX0Parser::Globalvar_initContext>();
}

BX0Parser::Globalvar_initContext* BX0Parser::GlobalvarContext::globalvar_init(size_t i) {
  return getRuleContext<BX0Parser::Globalvar_initContext>(i);
}

BX0Parser::TypeContext* BX0Parser::GlobalvarContext::type() {
  return getRuleContext<BX0Parser::TypeContext>(0);
}


size_t BX0Parser::GlobalvarContext::getRuleIndex() const {
  return BX0Parser::RuleGlobalvar;
}

void BX0Parser::GlobalvarContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGlobalvar(this);
}

void BX0Parser::GlobalvarContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGlobalvar(this);
}

BX0Parser::GlobalvarContext* BX0Parser::globalvar() {
  GlobalvarContext *_localctx = _tracker.createInstance<GlobalvarContext>(_ctx, getState());
  enterRule(_localctx, 2, BX0Parser::RuleGlobalvar);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(48);
    match(BX0Parser::T__0);
    setState(49);
    globalvar_init();
    setState(54);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == BX0Parser::T__1) {
      setState(50);
      match(BX0Parser::T__1);
      setState(51);
      globalvar_init();
      setState(56);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(57);
    match(BX0Parser::T__2);
    setState(58);
    type();
    setState(59);
    match(BX0Parser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Globalvar_initContext ------------------------------------------------------------------

BX0Parser::Globalvar_initContext::Globalvar_initContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BX0Parser::Globalvar_initContext::VAR() {
  return getToken(BX0Parser::VAR, 0);
}

tree::TerminalNode* BX0Parser::Globalvar_initContext::NUM() {
  return getToken(BX0Parser::NUM, 0);
}

tree::TerminalNode* BX0Parser::Globalvar_initContext::BOOL() {
  return getToken(BX0Parser::BOOL, 0);
}


size_t BX0Parser::Globalvar_initContext::getRuleIndex() const {
  return BX0Parser::RuleGlobalvar_init;
}

void BX0Parser::Globalvar_initContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGlobalvar_init(this);
}

void BX0Parser::Globalvar_initContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGlobalvar_init(this);
}

BX0Parser::Globalvar_initContext* BX0Parser::globalvar_init() {
  Globalvar_initContext *_localctx = _tracker.createInstance<Globalvar_initContext>(_ctx, getState());
  enterRule(_localctx, 4, BX0Parser::RuleGlobalvar_init);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    match(BX0Parser::VAR);
    setState(64);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == BX0Parser::T__4) {
      setState(62);
      match(BX0Parser::T__4);
      setState(63);
      _la = _input->LA(1);
      if (!(_la == BX0Parser::BOOL

      || _la == BX0Parser::NUM)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionContext ------------------------------------------------------------------

BX0Parser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BX0Parser::FunctionContext::VAR() {
  return getToken(BX0Parser::VAR, 0);
}

BX0Parser::TypeContext* BX0Parser::FunctionContext::type() {
  return getRuleContext<BX0Parser::TypeContext>(0);
}

BX0Parser::BlockContext* BX0Parser::FunctionContext::block() {
  return getRuleContext<BX0Parser::BlockContext>(0);
}

BX0Parser::Parameter_groupsContext* BX0Parser::FunctionContext::parameter_groups() {
  return getRuleContext<BX0Parser::Parameter_groupsContext>(0);
}


size_t BX0Parser::FunctionContext::getRuleIndex() const {
  return BX0Parser::RuleFunction;
}

void BX0Parser::FunctionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction(this);
}

void BX0Parser::FunctionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction(this);
}

BX0Parser::FunctionContext* BX0Parser::function() {
  FunctionContext *_localctx = _tracker.createInstance<FunctionContext>(_ctx, getState());
  enterRule(_localctx, 6, BX0Parser::RuleFunction);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(BX0Parser::T__5);
    setState(67);
    match(BX0Parser::VAR);
    setState(68);
    match(BX0Parser::T__6);
    setState(70);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == BX0Parser::VAR) {
      setState(69);
      parameter_groups();
    }
    setState(72);
    match(BX0Parser::T__7);
    setState(73);
    match(BX0Parser::T__2);
    setState(74);
    type();
    setState(75);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProcedureContext ------------------------------------------------------------------

BX0Parser::ProcedureContext::ProcedureContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BX0Parser::BlockContext* BX0Parser::ProcedureContext::block() {
  return getRuleContext<BX0Parser::BlockContext>(0);
}

BX0Parser::Parameter_groupsContext* BX0Parser::ProcedureContext::parameter_groups() {
  return getRuleContext<BX0Parser::Parameter_groupsContext>(0);
}


size_t BX0Parser::ProcedureContext::getRuleIndex() const {
  return BX0Parser::RuleProcedure;
}

void BX0Parser::ProcedureContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProcedure(this);
}

void BX0Parser::ProcedureContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProcedure(this);
}

BX0Parser::ProcedureContext* BX0Parser::procedure() {
  ProcedureContext *_localctx = _tracker.createInstance<ProcedureContext>(_ctx, getState());
  enterRule(_localctx, 8, BX0Parser::RuleProcedure);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    match(BX0Parser::T__8);
    setState(78);
    match(BX0Parser::T__6);
    setState(80);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == BX0Parser::VAR) {
      setState(79);
      parameter_groups();
    }
    setState(82);
    match(BX0Parser::T__7);
    setState(83);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Parameter_groupsContext ------------------------------------------------------------------

BX0Parser::Parameter_groupsContext::Parameter_groupsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<BX0Parser::Parameter_groupContext *> BX0Parser::Parameter_groupsContext::parameter_group() {
  return getRuleContexts<BX0Parser::Parameter_groupContext>();
}

BX0Parser::Parameter_groupContext* BX0Parser::Parameter_groupsContext::parameter_group(size_t i) {
  return getRuleContext<BX0Parser::Parameter_groupContext>(i);
}


size_t BX0Parser::Parameter_groupsContext::getRuleIndex() const {
  return BX0Parser::RuleParameter_groups;
}

void BX0Parser::Parameter_groupsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameter_groups(this);
}

void BX0Parser::Parameter_groupsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameter_groups(this);
}

BX0Parser::Parameter_groupsContext* BX0Parser::parameter_groups() {
  Parameter_groupsContext *_localctx = _tracker.createInstance<Parameter_groupsContext>(_ctx, getState());
  enterRule(_localctx, 10, BX0Parser::RuleParameter_groups);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    parameter_group();
    setState(88);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == BX0Parser::T__1) {
      setState(86);
      match(BX0Parser::T__1);
      setState(87);
      parameter_group();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Parameter_groupContext ------------------------------------------------------------------

BX0Parser::Parameter_groupContext::Parameter_groupContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> BX0Parser::Parameter_groupContext::VAR() {
  return getTokens(BX0Parser::VAR);
}

tree::TerminalNode* BX0Parser::Parameter_groupContext::VAR(size_t i) {
  return getToken(BX0Parser::VAR, i);
}

BX0Parser::TypeContext* BX0Parser::Parameter_groupContext::type() {
  return getRuleContext<BX0Parser::TypeContext>(0);
}


size_t BX0Parser::Parameter_groupContext::getRuleIndex() const {
  return BX0Parser::RuleParameter_group;
}

void BX0Parser::Parameter_groupContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameter_group(this);
}

void BX0Parser::Parameter_groupContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameter_group(this);
}

BX0Parser::Parameter_groupContext* BX0Parser::parameter_group() {
  Parameter_groupContext *_localctx = _tracker.createInstance<Parameter_groupContext>(_ctx, getState());
  enterRule(_localctx, 12, BX0Parser::RuleParameter_group);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    match(BX0Parser::VAR);
    setState(95);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == BX0Parser::T__1) {
      setState(91);
      match(BX0Parser::T__1);
      setState(92);
      match(BX0Parser::VAR);
      setState(97);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(98);
    match(BX0Parser::T__2);
    setState(99);
    type();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

BX0Parser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BX0Parser::VardeclContext* BX0Parser::StmtContext::vardecl() {
  return getRuleContext<BX0Parser::VardeclContext>(0);
}

BX0Parser::BlockContext* BX0Parser::StmtContext::block() {
  return getRuleContext<BX0Parser::BlockContext>(0);
}

BX0Parser::ExpressContext* BX0Parser::StmtContext::express() {
  return getRuleContext<BX0Parser::ExpressContext>(0);
}

BX0Parser::MoveContext* BX0Parser::StmtContext::move() {
  return getRuleContext<BX0Parser::MoveContext>(0);
}

BX0Parser::PrintContext* BX0Parser::StmtContext::print() {
  return getRuleContext<BX0Parser::PrintContext>(0);
}

BX0Parser::IfelseContext* BX0Parser::StmtContext::ifelse() {
  return getRuleContext<BX0Parser::IfelseContext>(0);
}

BX0Parser::WhileLoopContext* BX0Parser::StmtContext::whileLoop() {
  return getRuleContext<BX0Parser::WhileLoopContext>(0);
}

BX0Parser::ReturnStmtContext* BX0Parser::StmtContext::returnStmt() {
  return getRuleContext<BX0Parser::ReturnStmtContext>(0);
}


size_t BX0Parser::StmtContext::getRuleIndex() const {
  return BX0Parser::RuleStmt;
}

void BX0Parser::StmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt(this);
}

void BX0Parser::StmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt(this);
}

BX0Parser::StmtContext* BX0Parser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 14, BX0Parser::RuleStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(109);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(101);
      vardecl();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(102);
      block();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(103);
      express();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(104);
      move();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(105);
      print();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(106);
      ifelse();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(107);
      whileLoop();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(108);
      returnStmt();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VardeclContext ------------------------------------------------------------------

BX0Parser::VardeclContext::VardeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<BX0Parser::VarinitContext *> BX0Parser::VardeclContext::varinit() {
  return getRuleContexts<BX0Parser::VarinitContext>();
}

BX0Parser::VarinitContext* BX0Parser::VardeclContext::varinit(size_t i) {
  return getRuleContext<BX0Parser::VarinitContext>(i);
}

BX0Parser::TypeContext* BX0Parser::VardeclContext::type() {
  return getRuleContext<BX0Parser::TypeContext>(0);
}


size_t BX0Parser::VardeclContext::getRuleIndex() const {
  return BX0Parser::RuleVardecl;
}

void BX0Parser::VardeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVardecl(this);
}

void BX0Parser::VardeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVardecl(this);
}

BX0Parser::VardeclContext* BX0Parser::vardecl() {
  VardeclContext *_localctx = _tracker.createInstance<VardeclContext>(_ctx, getState());
  enterRule(_localctx, 16, BX0Parser::RuleVardecl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    match(BX0Parser::T__0);
    setState(112);
    varinit();
    setState(117);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == BX0Parser::T__1) {
      setState(113);
      match(BX0Parser::T__1);
      setState(114);
      varinit();
      setState(119);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(120);
    match(BX0Parser::T__2);
    setState(121);
    type();
    setState(122);
    match(BX0Parser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarinitContext ------------------------------------------------------------------

BX0Parser::VarinitContext::VarinitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BX0Parser::VarinitContext::VAR() {
  return getToken(BX0Parser::VAR, 0);
}

BX0Parser::ExprContext* BX0Parser::VarinitContext::expr() {
  return getRuleContext<BX0Parser::ExprContext>(0);
}


size_t BX0Parser::VarinitContext::getRuleIndex() const {
  return BX0Parser::RuleVarinit;
}

void BX0Parser::VarinitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarinit(this);
}

void BX0Parser::VarinitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarinit(this);
}

BX0Parser::VarinitContext* BX0Parser::varinit() {
  VarinitContext *_localctx = _tracker.createInstance<VarinitContext>(_ctx, getState());
  enterRule(_localctx, 18, BX0Parser::RuleVarinit);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(124);
    match(BX0Parser::VAR);
    setState(127);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == BX0Parser::T__4) {
      setState(125);
      match(BX0Parser::T__4);
      setState(126);
      expr(0);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

BX0Parser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t BX0Parser::TypeContext::getRuleIndex() const {
  return BX0Parser::RuleType;
}

void BX0Parser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void BX0Parser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}

BX0Parser::TypeContext* BX0Parser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 20, BX0Parser::RuleType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(129);
    _la = _input->LA(1);
    if (!(_la == BX0Parser::T__9

    || _la == BX0Parser::T__10)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

BX0Parser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<BX0Parser::StmtContext *> BX0Parser::BlockContext::stmt() {
  return getRuleContexts<BX0Parser::StmtContext>();
}

BX0Parser::StmtContext* BX0Parser::BlockContext::stmt(size_t i) {
  return getRuleContext<BX0Parser::StmtContext>(i);
}


size_t BX0Parser::BlockContext::getRuleIndex() const {
  return BX0Parser::RuleBlock;
}

void BX0Parser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void BX0Parser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}

BX0Parser::BlockContext* BX0Parser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 22, BX0Parser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(131);
    match(BX0Parser::T__11);
    setState(135);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << BX0Parser::T__0)
      | (1ULL << BX0Parser::T__6)
      | (1ULL << BX0Parser::T__11)
      | (1ULL << BX0Parser::T__13)
      | (1ULL << BX0Parser::T__14)
      | (1ULL << BX0Parser::T__16)
      | (1ULL << BX0Parser::T__17)
      | (1ULL << BX0Parser::T__18)
      | (1ULL << BX0Parser::T__19)
      | (1ULL << BX0Parser::T__20)
      | (1ULL << BX0Parser::BOOL)
      | (1ULL << BX0Parser::VAR)
      | (1ULL << BX0Parser::NUM))) != 0)) {
      setState(132);
      stmt();
      setState(137);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(138);
    match(BX0Parser::T__12);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressContext ------------------------------------------------------------------

BX0Parser::ExpressContext::ExpressContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BX0Parser::ExprContext* BX0Parser::ExpressContext::expr() {
  return getRuleContext<BX0Parser::ExprContext>(0);
}


size_t BX0Parser::ExpressContext::getRuleIndex() const {
  return BX0Parser::RuleExpress;
}

void BX0Parser::ExpressContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpress(this);
}

void BX0Parser::ExpressContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpress(this);
}

BX0Parser::ExpressContext* BX0Parser::express() {
  ExpressContext *_localctx = _tracker.createInstance<ExpressContext>(_ctx, getState());
  enterRule(_localctx, 24, BX0Parser::RuleExpress);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(140);
    expr(0);
    setState(141);
    match(BX0Parser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MoveContext ------------------------------------------------------------------

BX0Parser::MoveContext::MoveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BX0Parser::MoveContext::VAR() {
  return getToken(BX0Parser::VAR, 0);
}

BX0Parser::ExprContext* BX0Parser::MoveContext::expr() {
  return getRuleContext<BX0Parser::ExprContext>(0);
}


size_t BX0Parser::MoveContext::getRuleIndex() const {
  return BX0Parser::RuleMove;
}

void BX0Parser::MoveContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMove(this);
}

void BX0Parser::MoveContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BX0Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMove(this);
}

BX0Parser::MoveContext* BX0Parser::move() {
  MoveContext *_localctx = _tracker.createInstance<MoveContext>(_ctx, getState());
  enterRule(_localctx, 26, BX0Parser::RuleMove);
